Finish refactor to todoController and todoRepo
